tests/baselines/reference/propertyOrdering2.errors.txt
tests/cases/compiler/propertyOrdering2.ts(5,21): error TS2339: Property 'y' does not exist on type 'Foo'.


==== tests/cases/compiler/propertyOrdering2.ts (1 errors) ====
    class Foo {
        constructor(public x, y) { }
           foo() {
            var a = this.x;
            return this.y;
                        ~
!!! error TS2339: Property 'y' does not exist on type 'Foo'.
        }
    }
    